--- a/index.html
+++ b/index.html
@@ -124,21 +124,35 @@
         <div class="byline">
             <p>By <a href="https://suiumkanulanbek.github.io/suiumkanulanbek1/">Suiumkan Ulanbek</a></p>
         </div>
-        <p> </p>
+        <p>Ariana Sutton gave birth to healthy twins on May 22, 2023, at Newton-Wellesley Hospital, just outside Boston. It was her second pregnancy. 
+           Nine days later, she committed suicide, leaving behind her newborns, her 4-year-old daughter, Melody, and her husband, Tyler. </p>
 
-        <p> </p>
+        <p>In a note she left, Ariana described herself as “a burden to [her] family.”</p>
 
-        <p> </p>
+        <p>There had been no warning signs in her medical chart. Her first pregnancy had gone smoothly, as had this one. Her obstetricians at Newton-Wellesley Hospital, just outside
+        Boston, reassured her throughout that everything looked normal. Ariana had trusted them, and had been excited to bring her twins home.</p>
 
-        <p> </p>
+        <p>What her doctors failed to fully recognize was that Ariana had never fully recovered from postpartum depression after Melody’s birth. Her mental health challenges had never fully
+           resolved, but were largely overlooked in the course of her ongoing care. Her second pregnancy just intensified her postpartum struggles after delivery.</p>
 
-        <p> </p>
+        <p>She was discharged from the hospital on May 23. Eight days later, Tyler found her dead in their bedroom.</p>
 
-        <p> </p>
+        <p><strong>A Growing Toll</strong></p>  
 
-        <p> </p>
+        <p>The United States has the highest maternal mortality rate among the world's wealthiest nations. The recent data from the World Bank shows that approximately 650 women died
+           of maternal causes in 2023, marking a decline from the pandemic peak but still far above rates in peer high-income countries. During the height of the COVID-19 pandemic,
+           maternal deaths climbed, with over 1200 deaths recorded in 2021, the highest number in recent history. </p>
 
-    
+        <p>Mothers in America are significantly more likely to die from pregnancy-related causes than in any other developed country. Recent comparisons show that women in the U.S. 
+           are twice as likely to die from childbirth as women in the United Kingdom, nine times more likely than women in Australia, and 17 times more likely than women in Norway,
+           according to the World Bank data.</p>
+
+        <p>The burden is not evenly shared. African American women are nearly three times more likely to die from pregnancy-related complications than white women, a disparity that 
+           remains regardless of income or education level. Low-income mothers and mothers living in rural areas are also at heightened risk, often due to limited access to quality prenatal
+           and emergency obstetric care.</p>
+
+        <p></p>
+
 
         </div>
     </div>
