--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
            remains regardless of income or education level. Low-income mothers and mothers living in rural areas are also at heightened risk, often due to limited access to quality prenatal
            and emergency obstetric care.</p>
 
-        <p></p>
+        <iframe title="United States Has Highest Maternal Mortality Rate Among Developed Nations" aria-label="Line chart" id="datawrapper-chart-piOnS" src="https://datawrapper.dwcdn.net/piOnS/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="448" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}})}();
+</script>
+
+
 
 
         </div>
