--- a/index.html
+++ b/index.html
@@ -155,8 +155,30 @@
 </script>
 
 
+    <p>A review by the Centers for Disease Control and Prevention (CDC) found that four out of every five pregnancy-related deaths in America are preventable. That means hundreds of
+mothers die each year not from inevitability, but from systemic failure.</p>
+
+    <p>In recent years, the federal government has stepped up in its efforts to address maternal mortality. One of the most ambitious steps came in 2022, when the Biden administration
+introduced The Blueprint for Addressing the Maternal Health Crisis. The plan called for raising hospital safety standards, expanding perinatal workforce as well as the training for
+healthcare workers, and developing standardized protocols for handling maternal emergencies. It represented one of the clearest acknowledgments yet from Washington
+that maternal deaths in the United States are a public health emergency.</p>
+
+    <p>But for all its promise, most strategies to reduce maternal deaths have historically been focused on the delivery rooms. However, the majority of these maternal deaths happen
+after the mother and baby have been sent home. According to the data by Maternal Mortality Review Committees, around 65 percent of maternal deaths happen in the
+postpartum period. They are caused from a wide range of medical complications: hemorrhage, cardiac conditions, infections, preeclampsia, cardiomyopathy, and embolism.
+One cause in particular, however, has remained persistently under-addressed by hospitals and policymakers alike: maternal mental health complications.</p>
+
+<iframe title="Most Maternal Deaths Happen During Postpartum Period" aria-label="Bar Chart" id="datawrapper-chart-1IrCO" src="https://datawrapper.dwcdn.net/1IrCO/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="366" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}})}();
+</script>
+
+    <p>In recent years, mental health conditions, including postpartum depression, substance use disorders, and suicide, have become the leading cause of maternal death in the U.S.,
+accounting for roughly one in four cases, CDC data show. These losses are especially tragic because, in many cases, they could have been prevented with timely intervention,
+comprehensive screening, and better access to treatment. Yet mental health remains the blind spot in much of the country’s maternal health policy. </p>
 
 
+
+
+  
         </div>
     </div>
 </body>
