--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
 </script>
 
 
-    <p>A review by the Centers for Disease Control and Prevention (CDC) found that four out of every five pregnancy-related deaths in America are preventable. That means hundreds of
-mothers die each year not from inevitability, but from systemic failure.</p>
+        <p>A review by the Centers for Disease Control and Prevention (CDC) found that four out of every five pregnancy-related deaths in America are preventable. That means hundreds of
+         mothers die each year not from inevitability, but from systemic failure.</p>
 
-    <p>In recent years, the federal government has stepped up in its efforts to address maternal mortality. One of the most ambitious steps came in 2022, when the Biden administration
+        <p>In recent years, the federal government has stepped up in its efforts to address maternal mortality. One of the most ambitious steps came in 2022, when the Biden administration
 introduced The Blueprint for Addressing the Maternal Health Crisis. The plan called for raising hospital safety standards, expanding perinatal workforce as well as the training for
 healthcare workers, and developing standardized protocols for handling maternal emergencies. It represented one of the clearest acknowledgments yet from Washington
 that maternal deaths in the United States are a public health emergency.</p>
 
-    <p>But for all its promise, most strategies to reduce maternal deaths have historically been focused on the delivery rooms. However, the majority of these maternal deaths happen
+        <p>But for all its promise, most strategies to reduce maternal deaths have historically been focused on the delivery rooms. However, the majority of these maternal deaths happen
 after the mother and baby have been sent home. According to the data by Maternal Mortality Review Committees, around 65 percent of maternal deaths happen in the
 postpartum period. They are caused from a wide range of medical complications: hemorrhage, cardiac conditions, infections, preeclampsia, cardiomyopathy, and embolism.
 One cause in particular, however, has remained persistently under-addressed by hospitals and policymakers alike: maternal mental health complications.</p>
@@ -171,9 +171,45 @@ One cause in particular, however, has remained persistently under-addressed by h
 <iframe title="Most Maternal Deaths Happen During Postpartum Period" aria-label="Bar Chart" id="datawrapper-chart-1IrCO" src="https://datawrapper.dwcdn.net/1IrCO/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="366" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}})}();
 </script>
 
-    <p>In recent years, mental health conditions, including postpartum depression, substance use disorders, and suicide, have become the leading cause of maternal death in the U.S.,
+        <p>In recent years, mental health conditions, including postpartum depression, substance use disorders, and suicide, have become the leading cause of maternal death in the U.S.,
 accounting for roughly one in four cases, CDC data show. These losses are especially tragic because, in many cases, they could have been prevented with timely intervention,
 comprehensive screening, and better access to treatment. Yet mental health remains the blind spot in much of the country’s maternal health policy. </p>
+
+        <p><strong>The Postpartum Danger Zone</strong></p>  
+
+        <p>For many mothers, the most dangerous period begins not in the delivery room, but after they leave it. Once home, they often face overwhelming challenges with limited support,
+navigating sleepless nights, physical recovery, and the demands of caring for a newborn. “I’d say what is fueling the issue more than anything in our current culture is the lack of
+connection and support. There’s often no one helping a mother. In other cultures, babies are raised within a community, family, cousins, aunts, uncles, but here, many moms are
+alone at home with their baby, isolated and without support,” explains Dr. Constance Guille, a professor and director of the Women’s Reproductive Behavioral Health Division
+at the Medical University of South Carolina. For mothers who are already at risk, this isolation can magnify depression, anxiety, or substance use, sometimes with fatal results.</p>
+
+        <p>The postpartum period is also the point when the safety net shrinks. Routine medical appointments decrease within weeks, and when mothers do see a provider, the focus is
+usually on the baby’s growth and development, not the mother’s well-being.</p>
+
+        <p>“Most people have one visit with their OB-GYN around six weeks postpartum, but then that's it,” said Dr. Emily Dossett, a reproductive psychiatrist who founded the Reproductive
+Mental Health Program at LAC+USC Medical Center. “Most of the suicides occur from week seven or eight after delivery until the end of that first year, when the woman doesn't
+have any contact with her own doctor. And even if she has a nurse, the attention is mostly on the baby, not the mother,” she added.</p>
+
+
+<iframe title="Mental Health Accounts for Most Maternal Deaths in Recent Years" aria-label="Bar Chart" id="datawrapper-chart-lqHEr" src="https://datawrapper.dwcdn.net/lqHEr/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="358" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}})}();
+</script>
+
+
+        <p>For Abby Webb, a 40-year-old mother of two in Delaware, things got worse very quickly. Her history of depression offered little preparation for the intensity of postpartum
+depression, which began soon after she delivered her son this May. “I felt crazy – flat out, use the word, I was crazy,” she says. What set postpartum depression apart, she explains,
+was a constant fear: “It’s this sense that something bad is going to happen, and it’s going to end up costing my baby’s life.”</p>
+
+
+        <p>The American College of Obstetricians and Gynecologists (ACOG) reports that perinatal depression, major or minor depressive episodes during pregnancy or within a year after
+childbirth, is among the most common complications of pregnancy.</p>
+
+        <p>One in five mothers experiences mental health challenges during or after pregnancy, according to the ACOG reports. Yet many never seek help. For Abby Webb, the warning
+signs appeared right after the delivery. Her thoughts felt off, and her emotions were intense. “It wasn’t just postpartum depression. I had postpartum rage and postpartum anger. 
+And I was terrified that if I asked for help, someone would take my kids away,” she says.</p>
+
+       <p>The fear is far from uncommon. “Some women worry that if they admit to a mental health problem, or especially a substance use problem, their baby will be removed from their
+care,” explains Dr. Dossett.</p>
+
 
 
 
