--- a/index.html
+++ b/index.html
@@ -226,6 +226,88 @@ women of reproductive age live in such places, most of them in rural communities
             </figure>
         </div>
 
+        <p>The situation is getting worse. Between 2010 and 2022, some 530 hospitals shuttered their obstetrics units, removing access even in communities that once had it. In rural
+America, these closures often mean a pregnant woman or a new mother faces hours of travel for prenatal visits or delivery, a burden that can delay treatment when complications
+come up.</p>
+
+       <p>When Abby was diagnosed, doctors asked her to come to the hospital every day to do group therapy in the closest mental health facility she could go, a requirement that
+proved challenging for many reasons, but one the most inconvenient ones was that the trip took her 45 minutes drive each way.
+“I had no money to pay for gas to go back and forth. It was awful,” she recalls.</p>
+
+       <p>Access to mental health care is even less common than maternity services in many parts of the country. Most U.S. counties lack obstetric units altogether, and far fewer have
+mental health providers. Analysis of the Health Resources and Services Administration shows that on average there are fewer than 10 mental health providers per 100,000
+people across the states. </p>
+
+       <p>Another critical factor in accessing care, including mental health services, is having reliable health insurance. The number of uninsured women in the U.S. is significant and
+this lack of coverage creates a major barrier to treatment. Without insurance, women may face big costs for therapy, medication, or psychiatric consultations, forcing many to go
+without care, rely on overloaded public clinics, or end up having big medical debts.According to the analysis of the data provided by the ERASE-MM Community Vital Signs
+Project, in half of America’s states, more than 10 percent of women are uninsured. In Texas, the situation is even more severe: one in four women live without any health
+insurance, leaving them particularly vulnerable during and after pregnancy. This coverage gap deepens the existing disparities even worse, making it far more difficult for
+low-income mothers and mothers in rural or underserved areas to access essential mental health support when they need it most.</p>
+
+       
+       <p><strong>Individual Tragedies vs. Systemic Failures</strong></p>
+
+       <p>Ariana’s postpartum depression began to surface after the birth of her first child. At first, her concerns seemed like the normal worries of a new mother. But those concerns quickly 
+        intensified into overwhelming anxiety. She became consumed with fear. Her worries included everyday things, that the tap water might be unsafe for the baby, 
+        or that she had somehow hurt her daughter just by giving her a pacifier.</p>
+
+        <p>The fears escalated in a short amount of time. She insisted Tyler take their baby to the emergency room, not once, but several times. Each time, doctors examined the baby and
+found nothing wrong. But eventually, they recognized the real emergency wasn’t the baby, it was Ariana.</p>
+
+        <p>She was admitted twice to the psychiatric unit at Newton-Wellesley Hospital and prescribed antidepressants. After the second hospitalization, the medication began to
+take effect. Ariana seemed to stabilize. She returned to work, resumed her routines, and appeared to be herself again.</p>
+
+        <p>When Ariana told Tyler that she wanted to have another child, he hesitated. The memory of what had happened after their daughter’s birth was still fresh. He feared that the
+depression Ariana had experienced during the postpartum period might return, and this time, it could be even more severe.</p>
+
+        <p>But Ariana was still in therapy, and her therapist and psychiatrist assured the couple that she would be closely monitored throughout her pregnancy. That promise that someone
+would be paying attention gave Tyler enough reassurance to move forward with trying for another baby.</p>
+
+        <p>Ariana became pregnant with twins, and the pregnancy progressed without any major complications. She was excited and hopeful. She often chatted with the contractor
+working on their home, who happened to be a father of twins himself, asking him questions about what life with twins might be like. She started preparing the nursery,
+filling it with decorations and plans.</p>
+
+        <p>Her one of the biggest fears was to deliver prematurely. Then at 34 weeks, Ariana’s water broke. While early labor is not uncommon with twins, she immediately grew anxious and
+blamed herself. She wondered whether a recent stomach bug had triggered the early labor or if she could have done more to prevent it.</p>
+
+        <p>Doctors and nurses tried to reassure her. The nurse assigned to her, who was a twin herself, gently explained that delivering at 34 weeks was still within the normal range for
+twin pregnancies. But the reassurance didn’t land and Ariana’s worry had already taken roots.</p>
+
+        <p>According to Tyler, it was hard to get psychiatric treatment for postpartum depression. “Even when we knew what it was, we still had a difficult time finding a therapist
+specialized in postpartum depression. Because it's not talked about. It's not publicized. It's not even quick to look up on the internet,” he says.</p>
+
+        <p>Lack of mental health providers, especially the ones specializing in postpartum depression or addiction create the zones called “mental health vulnerability areas”. The
+Maternal Vulnerability Index, or MVI, ranks U.S. counties and states on the risks expectant mothers face, assigning each a score from zero to 100. Lower scores indicate the least
+vulnerability, while higher ones mark places where the odds of poor maternal health outcomes are greatest.</p>
+
+        <p>According to the MVI of mental health in the US, women in more than half of the counties in the US have a high risk of facing mental health issues.</p>
+
+
+<figure>
+                <img alt="image" src="mvi.png">
+            </figure>
+        </div>
+
+        <p>Organizations like ACOG recently have started prioritizing mental health treatment for mothers and have been providing recommendations, calling for all pregnant and
+postpartum patients to be screened for mental health conditions. Too often, anxiety, depression, or even suicidal thoughts go unnoticed. ACOG now urges providers to screen
+every patient multiple times, at the initial prenatal visit, midway through pregnancy, and again during postpartum.</p>
+
+        <p>However, putting those recommendations into practice isn’t as straightforward as it might seem in many parts of the country. According to Dr. Guille, screening remains limited.
+“OB-GYNs and pediatricians now have to learn how to screen and diagnose mental health concerns,” she says. “Some have embraced that role and do it very well. Others may not see it as part of their practice. 
+They worry about screening someone, identifying a problem, and having nowhere to send them. That’s a very real concern,” she added.</p>
+
+        <p>Doctors who worked with Ariana, and knew about her postpartum depression failed to recognize the signs while she was in the hospital and it was too late too soon to help her.
+When asked about what doctors could do differently, Tyler replied “If I could do something differently, I probably would have discussed it with doctors at
+Newton-Wellesley if I see any familiar signs, is it okay for her to be checked back into the ward?” He continued: “But again, we didn't have a lot of information on the topic even
+after those four years. Everything was brand new.” Sadly Ariana happened to fall victim to the healthcare system that overlooks health mental health complications like hers and
+often treats such cases as individual tragedies while they are deeply connected to structural failures.</p>
+
+         <p>Ariana’s death is not just a personal tragedy, it is emblematic of a national failure to recognize and address maternal mental health. Her struggles, and those of countless
+other mothers, expose gaps in postpartum monitoring, access to mental health care, and insurance coverage that leave many women unprotected in the weeks and months after
+giving birth. As the U.S. struggles with rising maternal mortality, policymakers and healthcare systems face an urgent question: how many more lives will be lost before
+maternal mental health is treated with the same urgency as physical complications? Until structural reforms extend care, support, and monitoring beyond the delivery room,
+mothers like Ariana will remain unrescued. </p>
 
 
 
