--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@ women of reproductive age live in such places, most of them in rural communities
             </figure>
         </div>
 
+        </div>
         <p>The situation is getting worse. Between 2010 and 2022, some 530 hospitals shuttered their obstetrics units, removing access even in communities that once had it. In rural
 America, these closures often mean a pregnant woman or a new mother faces hours of travel for prenatal visits or delivery, a burden that can delay treatment when complications
 come up.</p>
@@ -288,7 +289,8 @@ vulnerability, while higher ones mark places where the odds of poor maternal hea
                 <img alt="image" src="mvi.png">
             </figure>
         </div>
-
+ 
+        </div>
         <p>Organizations like ACOG recently have started prioritizing mental health treatment for mothers and have been providing recommendations, calling for all pregnant and
 postpartum patients to be screened for mental health conditions. Too often, anxiety, depression, or even suicidal thoughts go unnoticed. ACOG now urges providers to screen
 every patient multiple times, at the initial prenatal visit, midway through pregnancy, and again during postpartum.</p>
