--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         <div class="byline">
             <p>By <a href="https://suiumkanulanbek.github.io/suiumkanulanbek1/">Suiumkan Ulanbek</a></p>
         </div>
+        <div class="content">
         <p>Ariana Sutton gave birth to healthy twins on May 22, 2023, at Newton-Wellesley Hospital, just outside Boston. It was her second pregnancy. 
            Nine days later, she committed suicide, leaving behind her newborns, her 4-year-old daughter, Melody, and her husband, Tyler. </p>
 
@@ -220,13 +221,15 @@ Medicaid coverage from two months to a full year. Proposed in 2021 by then-Vice 
 accessible in many parts of the country. Analysis shows that about 35 percent of U.S. counties are “maternity care deserts”, a term the March of Dimes, a nonprofit focused on
 improving the health of mothers and babies, used to describe areas with no hospitals or birth centers offering obstetric care and no obstetric providers. More than 2.3 million 
 women of reproductive age live in such places, most of them in rural communities. </p>
+</div>
 
+<div class="content">
      <figure>
                 <img alt="image" src="map_FINAL.png">
             </figure>
         </div>
 
-        </div>
+<div class="content">
         <p>The situation is getting worse. Between 2010 and 2022, some 530 hospitals shuttered their obstetrics units, removing access even in communities that once had it. In rural
 America, these closures often mean a pregnant woman or a new mother faces hours of travel for prenatal visits or delivery, a burden that can delay treatment when complications
 come up.</p>
@@ -283,14 +286,15 @@ Maternal Vulnerability Index, or MVI, ranks U.S. counties and states on the risk
 vulnerability, while higher ones mark places where the odds of poor maternal health outcomes are greatest.</p>
 
         <p>According to the MVI of mental health in the US, women in more than half of the counties in the US have a high risk of facing mental health issues.</p>
+</div>
 
-
+<div class="content">
 <figure>
                 <img alt="image" src="mvi.png">
             </figure>
         </div>
  
-        </div>
+<div class="content">
         <p>Organizations like ACOG recently have started prioritizing mental health treatment for mothers and have been providing recommendations, calling for all pregnant and
 postpartum patients to be screened for mental health conditions. Too often, anxiety, depression, or even suicidal thoughts go unnoticed. ACOG now urges providers to screen
 every patient multiple times, at the initial prenatal visit, midway through pregnancy, and again during postpartum.</p>
