--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ women of reproductive age live in such places, most of them in rural communities
 
 <div class="content">
      <figure>
-                <img alt="image" src="map_FINAL.png">
+                <img alt="image" src="map_FINAL..png">
             </figure>
         </div>
 
