--- a/index.html
+++ b/index.html
@@ -117,10 +117,15 @@
             <p class="subhead">Efforts to reduce maternal mortality in the United States have focused narrowly on
                                delivery rooms and hospital staff training, while the majority of maternal deaths occur
                                after mothers leave maternity wards. </p>
+            
             <figure>
-                <img alt="image" src="family.png">
-            </figure>
-        </div>
+               <img alt="image" src="family.png">
+               <figcaption>
+                    Ariana Sutton in the hospital after delivering her twins. She committed suicide after nine days due to
+                    postpartum depression. (Courtesy of Tyler Sutton)
+               </figcaption>
+               </figure>
+               
         <div class="byline">
             <p>By <a href="https://suiumkanulanbek.github.io/suiumkanulanbek1/">Suiumkan Ulanbek</a></p>
         </div>
