--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
             
             <figure>
                <img alt="image" src="family.png">
-               <figcaption>
-                    Ariana Sutton in the hospital after delivering her twins. She committed suicide after nine days due to
-                    postpartum depression. (Courtesy of Tyler Sutton)
+               <figcaption class="left-caption">
+        Ariana Sutton in the hospital after delivering her twins. She committed suicide after nine days due to
+        postpartum depression. (Courtesy of Tyler Sutton)
                </figcaption>
-               </figure>
-               
+            </figure>
+
         <div class="byline">
             <p>By <a href="https://suiumkanulanbek.github.io/suiumkanulanbek1/">Suiumkan Ulanbek</a></p>
         </div>
