--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
         figcaption {
             font-size: 0.8em;
-            text-align: center;
+            text-align: left;
             margin-top: 0.5em;
-            color: #666;
+            color: #b6b4b4;
         }
 
         h1 {
