--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             font-size: 0.8em;
             text-align: left;
             margin-top: 0.5em;
-            color: #b6b4b4;
+            color: #302f2f;
+            font-style: italic; /* added */
         }
 
         h1 {
