--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         .content {
             max-width: 640px;
             margin: auto;
+            padding-left: 0.5em;  /* adds 0.5em space on the left */
+            padding-right: 0.5em; /* adds 0.5em space on the right */
+
         }
 
         .header {
