--- a/index.html
+++ b/index.html
@@ -13,107 +13,101 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
     <style>
-    body {
-        margin: 0;
-        font-size: 17px;
-        font-family: 'Libre Franklin', sans-serif;
-        text-rendering: optimizeLegibility;
-    }
+body {
+    margin: 0;
+    font-size: 17px;
+    font-family: 'Libre Franklin', sans-serif;
+    text-rendering: optimizeLegibility;
+}
 
-    /* Main content container */
+.content {
+    max-width: 640px;
+    margin: auto;
+    
+}
+
+.header {
+    padding: 3em 0;
+}
+
+a {
+    color: #f05349;
+}
+
+.footer {
+    background: #f4f4f4;
+    text-align: center;
+    font-size: 0.8em;
+    margin-top: 4em;
+    padding: 4em 0;
+}
+
+figure {
+    margin: 0;
+    padding-bottom: 1.2em;
+}
+
+figcaption {
+    font-size: 0.8em;
+    text-align: left;
+    margin-top: 0.5em;
+    color: #959595;
+    font-style: italic; /* added */
+}
+
+h1 {
+    font-family: 'Libre Franklin', sans-serif;
+    font-weight: bold;
+    font-size: 3em;
+    line-height: 1.1;
+}
+
+.subhead {
+    font-family: 'Libre Franklin', sans-serif;
+}
+
+iframe,
+img,
+video {
+    max-width: 100%;
+}
+
+p {
+    line-height: 1.6;
+    margin: 0;
+    padding-bottom: 1.2em;
+}
+
+ul {
+    margin: 0;
+    padding-bottom: 1em;
+    line-height: 1.6;
+}
+
+iframe {
+    padding-bottom: 1.2em;
+}
+
+code {
+    font-family: 'Courier New', monospace;
+    background: #fffbaf;
+    font-size: 0.85em;
+}
+
+.full-width figure {
+    text-align: center;
+}
+
+/* margin on mobile */
+@media (max-width: 640px) {
+    body {
+        font-size: 18px;
+    }
     .content {
-        width: calc(100% - 1em); /* full width minus 0.5em on each side */
-        max-width: 1000px;       /* optional maximum width */
-        margin: auto;
-        padding-left: 0.5em;  
+        padding-left: 0.5em;
         padding-right: 0.5em;
     }
-
-    .header {
-        padding: 3em 0;
-    }
-
-    a {
-        color: #f05349;
-    }
-
-    .footer {
-        background: #f4f4f4;
-        text-align: center;
-        font-size: 0.8em;
-        margin-top: 4em;
-        padding: 4em 0;
-    }
-
-    figure {
-        margin: 0;
-        padding-bottom: 1.2em;
-    }
-
-    figcaption {
-        font-size: 0.8em;
-        text-align: left;
-        margin-top: 0.5em;
-        color: #959595;
-        font-style: italic; /* italic text */
-    }
-
-    h1 {
-        font-family: 'Libre Franklin', sans-serif;
-        font-weight: bold;
-        font-size: 3em;
-        line-height: 1.1;
-    }
-
-    .subhead {
-        font-family: 'Libre Franklin', sans-serif;
-    }
-
-    iframe,
-    img,
-    video {
-        max-width: 100%;
-    }
-
-    p {
-        line-height: 1.6;
-        margin: 0;
-        padding-bottom: 1.2em;
-    }
-
-    ul {
-        margin: 0;
-        padding-bottom: 1em;
-        line-height: 1.6;
-    }
-
-    iframe {
-        padding-bottom: 1.2em;
-    }
-
-    code {
-        font-family: 'Courier New', monospace;
-        background: #fffbaf;
-        font-size: 0.85em;
-    }
-
-    .full-width figure {
-        text-align: center;
-    }
-
-    /* Mobile adjustments */
-    @media (max-width: 640px) {
-        body {
-            font-size: 18px;
-        }
-
-        .content {
-            width: calc(100% - 1em); /* keep small margins on mobile */
-            max-width: 100%;
-            padding-left: 0.5em;
-            padding-right: 0.5em;
-        }
-    }
+}
 </style>
 
 </head>
