--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@ a {
     padding: 4em 0;
 }
 
+.footer-nav {
+    text-align: center;
+    margin-top: 2em;
+    font-size: 0.9em;
+}
+
 figure {
     margin: 0;
     padding-bottom: 1.2em;
@@ -321,7 +327,9 @@ maternal mental health is treated with the same urgency as physical complication
 mothers like Ariana will remain unrescued. </p>
 
 
-
+<div class="footer-nav">
+                <a href="https://github.com/suiumkanulanbek/MaternalMortality_MastersProject">Github</a>
+            </div>
   
         </div>
     </div>
