--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ code {
             </figure>
         <div class="byline">
             <p>By <a href="https://suiumkanulanbek.github.io/suiumkanulanbek1/">Suiumkan Ulanbek</a></p>
+            <p>August 14, 2025</p>
         </div>
         <div class="content">
         <p>Ariana Sutton gave birth to healthy twins on May 22, 2023, at Newton-Wellesley Hospital, just outside Boston. It was her second pregnancy. 
